# kincpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  flake.nix  kinematics_solver.py  setup.py  test.py
kincpp/: __init__.py  kinematics_solver.py
nix/pkgs/kincpp/: default.nix  setup.py
src/: eigquadprog.hpp  kinematics.cpp  kinematics_solver.cpp  kinematics_solver.h  utils.cpp  utils.h
src/kincpp/: eigquadprog.hpp  global_definitions.h  kinematics_solver.h  utils.h
testing/: ik_qp_test.py  test_kinematics.py
